--- a/app/styles.css
+++ b/app/styles.css
@@ -665,11 +665,6 @@ video {
   margin-right: auto;
 }
 
-.my-6{
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
 .my-10{
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
@@ -713,10 +708,6 @@ video {
 
 .mt-16{
   margin-top: 4rem;
-}
-
-.mr-0{
-  margin-right: 0px;
 }
 
 .block{
@@ -861,6 +852,10 @@ video {
   gap: 1.25rem;
 }
 
+.gap-7{
+  gap: 1.75rem;
+}
+
 .gap-x-10{
   -moz-column-gap: 2.5rem;
        column-gap: 2.5rem;
@@ -878,16 +873,34 @@ video {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
 .space-y-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
-.space-y-3 > :not([hidden]) ~ :not([hidden]){
+.space-y-8 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
+.space-x-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .overflow-hidden{
@@ -910,13 +923,26 @@ video {
   border-radius: 0.375rem;
 }
 
+.border{
+  border-width: 1px;
+}
+
 .border-b{
   border-bottom-width: 1px;
+}
+
+.border-t{
+  border-top-width: 1px;
 }
 
 .border-secondaryColor{
   --tw-border-opacity: 1;
   border-color: rgb(255 204 0 / var(--tw-border-opacity));
+}
+
+.border-primaryColorLight{
+  --tw-border-opacity: 1;
+  border-color: rgb(1 13 120 / var(--tw-border-opacity));
 }
 
 .bg-blackColor{
@@ -1002,12 +1028,12 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.pt-5{
-  padding-top: 1.25rem;
-}
-
 .pb-5{
   padding-bottom: 1.25rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
 }
 
 .text-center{
@@ -1206,6 +1232,11 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.hover\:-translate-y-1:hover{
+  --tw-translate-y: -0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .hover\:scale-110:hover{
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
@@ -1241,14 +1272,6 @@ video {
     position: static;
   }
 
-  .md\:m-0{
-    margin: 0px;
-  }
-
-  .md\:m-auto{
-    margin: auto;
-  }
-
   .md\:\!my-0{
     margin-top: 0px !important;
     margin-bottom: 0px !important;
@@ -1264,21 +1287,6 @@ video {
     margin-right: 1.25rem;
   }
 
-  .md\:mx-40{
-    margin-left: 10rem;
-    margin-right: 10rem;
-  }
-
-  .md\:mx-auto{
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .md\:my-10{
-    margin-top: 2.5rem;
-    margin-bottom: 2.5rem;
-  }
-
   .md\:ml-0{
     margin-left: 0px;
   }
@@ -1291,16 +1299,12 @@ video {
     margin-left: auto;
   }
 
-  .md\:mr-0{
-    margin-right: 0px;
+  .md\:mr-auto{
+    margin-right: auto;
   }
 
   .md\:mt-24{
     margin-top: 6rem;
-  }
-
-  .md\:mr-auto{
-    margin-right: auto;
   }
 
   .md\:block{
@@ -1371,13 +1375,12 @@ video {
     justify-content: flex-start;
   }
 
-  .md\:gap-20{
-    gap: 5rem;
+  .md\:justify-between{
+    justify-content: space-between;
   }
 
-  .md\:gap-x-2{
-    -moz-column-gap: 0.5rem;
-         column-gap: 0.5rem;
+  .md\:gap-20{
+    gap: 5rem;
   }
 
   .md\:border-none{
@@ -1414,6 +1417,10 @@ video {
 }
 
 @media (min-width: 1024px){
+  .lg\:grid{
+    display: grid;
+  }
+
   .lg\:h-40{
     height: 10rem;
   }
